BUGFIX: Team listing text overflow
remove overflow hidden in .stage because it cuts .team-listing-profile boxes near the footer section

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Atoms/_Base.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Atoms/_Base.scss
@@ -14,6 +14,7 @@ body {
 	text-align: $start;
 	color: $base-text-color;
 	background: $body-background;
+  overflow: hidden;
 }
 
 // Disable scroll - Used in the OffCanvas active state.
